--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>May 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 63 892 9920</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>05 April 2003</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 60 371 5337</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ulundi, South Africa</span></li>
                 </ul>
               </div>
@@ -207,7 +207,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Editing</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Editing</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -271,7 +271,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4>Senior Colourist</h4>
               <h5>2022 - Present</h5>
               <p><em>AFDA Durban Film School</em></p>
               <ul>
