--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <h2>Resume</h2>
         <p> I am a dedicated, hardworking and passionate filmmaker with a sharp creative
  mind that highly reflects on my craft in colour grading and cinematography. I
- recently finished University with a strong academic record, and I am receiving my
+ graduated at AFDA Durban Film School with a strong academic record, and I am receiving my
  degree in Motion Picture Medium in 2025. I have a keen eye for detail when it
  comes to showcasing my abilities in both colour grading and cinematography. I
  specialize in colour grading mostly, but will still produce great work in
