--- a/index.html
+++ b/index.html
@@ -460,6 +460,11 @@
 
     </section><!-- /Contact Section -->
 
+    <footer style="text-align:center; padding:20px; background-color:#0f172a; color:#e6eef8; font-family:system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;">
+  <p style="margin:0; font-size:16px;">Built by <strong>Sibongakonke Koekman</strong></p>
+</footer>
+
+
   </main>
 
   <!-- Scroll Top -->
