--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       </ul>
     </nav>
 
+    <footer style="text-align:center; padding:20px; background-color:#0f172a; color:#e6eef8; font-family:system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;">
+  <p style="margin:0; font-size:16px;">Built by <strong>Sibongakonke Koekman</strong></p>
+</footer>
+
+
   </header>
 
   <main class="main">
